00-11-Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_60\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;D:\mycode\Komunikasi data\00-11-Project
-d
D:\mycode\Komunikasi data\00-11-Project\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\mycode\Komunikasi data\00-11-Project\GUI.java
<---- end of javadoc command ---->
Loading source file D:\mycode\Komunikasi data\00-11-Project\GUI.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_60
Building tree for all the packages and classes...
Generating D:\mycode\Komunikasi data\00-11-Project\doc\GUI.html...
D:\mycode\Komunikasi data\00-11-Project\cobaGUI.java:67: error: illegal start of expression
             if(){
                ^
D:\mycode\Komunikasi data\00-11-Project\cobaGUI.java:142: error: illegal start of expression
              ketikanSatuBaris = "keluar"+getText()+ ;
                                                     ^
Generating D:\mycode\Komunikasi data\00-11-Project\doc\package-frame.html...
Generating D:\mycode\Komunikasi data\00-11-Project\doc\package-summary.html...
Generating D:\mycode\Komunikasi data\00-11-Project\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating D:\mycode\Komunikasi data\00-11-Project\doc\allclasses-frame.html...
Generating D:\mycode\Komunikasi data\00-11-Project\doc\allclasses-noframe.html...
Generating D:\mycode\Komunikasi data\00-11-Project\doc\index.html...
Generating D:\mycode\Komunikasi data\00-11-Project\doc\stylesheet.css...
2 errors
